--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0a0a23" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
-    <title>BTC</title>
-  </head>
+  <!-- Primary SEO Meta Tags -->
+  <title>Burj Tech Consultancy | BTC Global</title>
+  <meta name="title" content="Burj Tech Consultancy | BTC Global" />
+  <meta
+    name="description"
+    content="Burj Tech Consultancy (BTC Global) provides IT services, consulting, and business solutions. We help businesses grow with technology and digital transformation."
+  />
+  <meta
+    name="keywords"
+    content="Burj Tech Consultancy, BTC Global, IT services, business consulting, technology solutions, digital transformation, software development"
+  />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.btcglobal.info/" />
+  <meta property="og:title" content="Burj Tech Consultancy | BTC Global" />
+  <meta
+    property="og:description"
+    content="Burj Tech Consultancy (BTC Global) - Your trusted IT & business consulting partner."
+  />
+  <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.btcglobal.info/" />
+  <meta property="twitter:title" content="Burj Tech Consultancy | BTC Global" />
+  <meta
+    property="twitter:description"
+    content="Burj Tech Consultancy (BTC Global) - Professional IT services & consulting solutions."
+  />
+  <meta property="twitter:image" content="%PUBLIC_URL%/logo.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
+
+  <!-- Manifest -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <!-- Font Awesome -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
