--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     property="og:description"
     content="Burj Tech Consultancy (BTC Global) - Your trusted IT & business consulting partner."
   />
-  <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
+  <meta property="og:image" content="%PUBLIC_URL%/fav.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -36,10 +36,10 @@
     property="twitter:description"
     content="Burj Tech Consultancy (BTC Global) - Professional IT services & consulting solutions."
   />
-  <meta property="twitter:image" content="%PUBLIC_URL%/logo.jpg" />
+  <meta property="twitter:image" content="%PUBLIC_URL%/fav.png" />
 
   <!-- Favicon -->
-  <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
+  <link rel="icon" href="%PUBLIC_URL%/fav.png" />
 
   <!-- Manifest -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
